--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 </head>
 <body>
   <main>
-    <img src="images/image-qr-code.png" alt="QR code">
-    <h1>Improve your front-end skills by building projects</h1>
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <img src="images/image-qr-code.png" alt="QR code to www.frontendmentor.com">
+    <div>
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Santiago Pagura</a>.
+    Coded by <a href="https://github.com/santiagopagura">Santiago Pagura</a>.
   </footer>
 </body>
 </html>
